// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. an error 1`] = `<ArticleError />`;

exports[`2. loading 1`] = `null`;

exports[`3. an article with no headline falls back to use shortheadline 1`] = `
<ArticleSkeleton>
  <View>
    <Text>
      Some Short Headline
    </Text>
    <View>
      <View>
        <ArticleBylineWithLinks
          ast={
            Array [
              Object {
                "attributes": Object {},
                "children": Array [
                  Object {
                    "attributes": Object {
                      "value": "Some byline",
                    },
                    "children": Array [],
                    "name": "text",
                  },
                ],
                "name": "inline",
              },
            ]
          }
          color="#1D1D1B"
        />
      </View>
      <View>
        <Text>
          Friday March 13 2015, 6:54pm, The Times
        </Text>
      </View>
    </View>
  </View>
  <View>
    <ModalImage
      aspectRatio={1.7777777777777777}
      caption={
        <Caption
          credits="Some Credits"
          text="Some Caption"
        />
      }
      index={0}
      onImagePress={null}
      uri="https://crop169.io"
    />
    <CenteredCaption
      credits="Some Credits"
      text="Some Caption"
    />
  </View>
</ArticleSkeleton>
`;

exports[`4. an article with ads 1`] = `
<ArticleSkeleton>
  <View>
    <Text>
      Some Headline
    </Text>
    <View>
      <View>
        <ArticleBylineWithLinks
          ast={
            Array [
              Object {
                "attributes": Object {},
                "children": Array [
                  Object {
                    "attributes": Object {
                      "value": "Some byline",
                    },
                    "children": Array [],
                    "name": "text",
                  },
                ],
                "name": "inline",
              },
            ]
          }
          color="#1D1D1B"
        />
      </View>
      <View>
        <Text>
          Friday March 13 2015, 6:54pm, The Times
        </Text>
      </View>
    </View>
  </View>
  <View>
    <ModalImage
      aspectRatio={1.7777777777777777}
      caption={
        <Caption
          credits="Some Credits"
          text="Some Caption"
        />
      }
      index={0}
      onImagePress={null}
      uri="https://crop169.io"
    />
    <CenteredCaption
      credits="Some Credits"
      text="Some Caption"
    />
  </View>
</ArticleSkeleton>
`;
